cosmetic fixes | books covers proto

--- a/ClientApp/src/app/auth/components/login/login.component.scss
+++ b/ClientApp/src/app/auth/components/login/login.component.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
 
     align-items: center;
-    border: 1px solid #373a40;
+    border: 3px solid #373a40;
     border-radius: 10px;
 }
 
@@ -24,6 +24,8 @@
     padding: 30px 0;
     font-size: 40px;
     font-family: Roboto;
+    display: flex;
+    justify-content: center;
 }
 
 .mat-custom-raised-button {
